fixed ship visibility on crash

--- a/client/src/asteroids.css
+++ b/client/src/asteroids.css
@@ -288,76 +288,6 @@ border: 2px solid var(--volt);
   border: 2px solid purple;
 }
 
-.ship {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  background-color: white;
-  filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.8)); 
-}
-
-.ship2 {
-  position: absolute;
-  transform-origin: bottom center;
-  width: 30px;
-  height: 30px;
-  border-left: 99px solid transparent;
-  border-right: 15px solid transparent;
-  border-bottom: 30px solid white;
-  filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.8));
-}
-
-.asteroid {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: rgb(148, 57, 57);
-  border-radius: 50%;
-}
-
-.asteroid-half {
-  position: absolute;
-  width: 30px; /* Adjust size as needed */
-  height: 30px; /* Adjust size as needed */
-  background-color: rgba(255, 187, 0, 0.8); /* Adjust color and transparency */
-  border-radius: 50%;
-}
-
-.projectile {
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  background-color: red;
-  border-radius: 50%;
-}
-
-
-
-
-
-
-
-
-
-.particle-exhaust {
-  width: 6px;
-  height: 6px;
-  background-color: rgba(255, 140, 0, 0.8); /* Orange color with some transparency */
-  box-shadow: 0 0 10px rgba(255, 204, 0, 0.8); /* Example shadow effect */
-  border-radius: 50%; /* Circular particles */
-  position: absolute;
-  opacity: 0.8; /* Adjust opacity */
-  animation: fade 0.9s ease-out forwards;
-}
-
-@keyframes fade {
-  to {
-    opacity: 0;
-    transform: scale(0.5); /* Particles shrink over time */
-  }
-}
-
-
 /* ----------------- FinalScore game over -----------------*/
 
 .grid-container {
@@ -367,5 +297,4 @@ border: 2px solid var(--volt);
   border: 2px solid var(--volt);
   border-radius: 10px;
  margin: auto;
- 
 }
